--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="https://github.com/masui/GyaimMotion" class="btn">View on GitHub</a>
       <a href="https://github.com/masui/GyaimMotion/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/masui/GyaimMotion/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/masui/GyaimMotion/???" class="btn">Download dmg</a>
     </section>
 
     <section class="main-content">
