--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gyaim</h1>
-      <h2 class="project-tagline">RubyMotion版のGyaim (Mac用の日本語入力IME)</h2>
+      <h2 class="project-tagline">Yosemite用の日本語入力IME</h2>
+      <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">Download dmg</a>
       <a href="https://github.com/masui/GyaimMotion" class="btn">View on GitHub</a>
+      <!--
       <a href="https://github.com/masui/GyaimMotion/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/masui/GyaimMotion/tarball/master" class="btn">Download .tar.gz</a>
-      <a href="https://github.com/masui/GyaimMotion/???" class="btn">Download dmg</a>
+      -->
     </section>
 
     <section class="main-content">
