--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
       <h3>
 	<a class="anchor" aria-hidden="true"></a>特徴</h3>
 
-      <p>あいうえお </p>
+      <p>Yosemite用のIMEです。
+      </p>
+
+      <h3><a class="anchor" aria-hidden="true"></a>インストール</h3>
+      <p>
+	<ul>
+	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開します
+	</ul>
+      </p>
 
       <h3>
 	<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
