--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
       <h2 class="project-tagline">Yosemite用の日本語入力IME</h2>
       <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">dmgダウンロード</a>
       <a href="https://github.com/masui/GyaimMotion" class="btn">GitHubソース</a>
-      <!--
-      <a href="https://github.com/masui/GyaimMotion/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/masui/GyaimMotion/tarball/master" class="btn">Download .tar.gz</a>
-      -->
     </section>
 
     <section class="main-content">
-      <h3>
-	<a class="anchor" aria-hidden="true"></a>特徴</h3>
+      <h3><a class="anchor" aria-hidden="true"></a>特徴</h3>
 
-      <p>Yosemite用のIMEです。
+      <p>
+	<ul>
+	  <li>GyaimはMacOS Yosemite用の日本語入力IMEです。</li>
+	  <li>Rubyで記述されています。</li>
+	</ul>
       </p>
 
       <h3><a class="anchor" aria-hidden="true"></a>インストール</h3>
