--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <h3><a class="anchor" aria-hidden="true"></a>インストール</h3>
       <p>
 	<ul>
-	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開します
+	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開し、<code>~/Library/Input Methods</code>にコピーします。</li>
+	  <li>システム環境設定を開き、「キーボード」を
 	</ul>
       </p>
 
