--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gyaim</h1>
-      <h2 class="project-tagline">Yosemite用の日本語入力IME</h2>
+      <h2 class="project-tagline">MacOS用の簡易日本語入力IME</h2>
       <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">dmgダウンロード</a>
       <a href="https://github.com/masui/GyaimMotion" class="btn">GitHubソース</a>
     </section>
@@ -22,8 +22,9 @@
 
       <p>
 	<ul>
-	  <li>GyaimはMacOS Yosemite用の日本語入力IMEです。(古いMacOSでは多分動きません)</li>
-	  <li>1000行程度のRubyで記述されています。</li>
+	  <li>GyaimはMacOS用の日本語入力IMEです。(Yosemiteで確認しています。それ以前のMacOSでは動かないかもしれません)</li>
+	  <li>1000行程度のRubyで記述されてあり、改変が比較的簡単です。</li>
+	  <li>画像を入力できます</li>
 	</ul>
       </p>
 
@@ -38,7 +39,7 @@
       <h3><a class="anchor" aria-hidden="true"></a>ビルド</h3>
       <p>
 	<ul>
-	  <li><a href="">RubyMotion</a>が必要です</li>
+	  <li><a href="http://www.rubymotion.com/">RubyMotion</a>が必要です</li>
 	  <li><code>bundle install</code>でgemをインストールします
 	  <li><code>rake</code>でビルドします
 	</ul>
