--- a/index.html
+++ b/index.html
@@ -44,6 +44,53 @@
 	  <li><code>rake</code>でビルドします
 	</ul>
       </p>
+
+      <h3><a class="anchor" aria-hidden="true"></a>使い方</h3>
+      <p>
+	<ul>
+	  <li>ローマ字を入力すると候補が表示されます</li>
+	  <li>スペースキーで候補を選択し、改行キーで確定します</li>
+	  <li>ローマ字入力の後ですぐ改行キーを押すと完全マッチで候補が検索されます</li>
+	  <ul>
+	    <li>ひらがな、カタカナ入力に便利です</li>
+	  </ul>
+	  <li>ローマ字入力した後「.」を入力するとGoogleSuggestが呼ばれます</li>
+	  <ul>
+	    <li>固有名詞の入力に便利です</li>
+	  </ul>
+	  <ul>単語登録
+	    <li>登録したい単語をドラッグして選択した後で文字入力すると、選択した単語が第一候補に表示され、
+	      その単語をスペースキーで選択して改行キーで確定するとユーザ辞書に登録されます</li>
+	  </ul>
+	  <li>ユーザ辞書、学習辞書は以下にセーブされます</li>
+	  <ul>
+	    <li>ユーザ辞書: <code>~/.gyaimdict/localdict.txt</code></li>
+	    <li>学習辞書: <code>~/.gyaimdict/studydict.txt</code></li>
+	    <li>ユーザ辞書は普通に編集可能です</li>
+	  </ul>
+	</ul>
+      </p>
+	    
+      <h3><a class="anchor" aria-hidden="true">秘密文字列の入力</a></h3>
+      <p>
+	<ul>
+	  <li>クレジットカード番号のように、辞書に登録はできないけれどもしばしば入力が必要な秘密文字列を簡単に入力することができます</li>
+	  <li>秘密の読みを入力した後で「?」を入力すると秘密文字列が候補に表示されます</li>
+	  <li>前述の単語登録のやり方を使用して、文字列の最後に「?」が続くような読みを登録すると、暗号化された文字列が辞書に登録されます</li>
+	  <li>たとえばクレジットカード番号を「kureka?」という読みで登録しておくと、「kureka?」と入力したときクレジットカード番号が候補に表示されます</li>
+	  <li>「kureka」だと他人にわかってしまうかもしれませんが、秘密の読みを利用すれば、それを入力しない限りクレジットカード番号が候補に出ることはありませんし、
+	    辞書には暗号化された文字列だけが登録されるので安全です  (「kureka」のような読みは辞書に登録されません)</li>
+	  <li>例えば「32文字のパスワードを要求する鬼畜なシステム」が有ったとしても、この方式で登録しておけば覚えておく必要がなくなります</li>
+	  <li>何かの理由で秘密ファイルを使う必要があるとき、秘密ファイルの名前を登録しておけば見失ってしまうことがありません</li>
+	</ul>
+      </p>
+
+      <h3><a class="anchor" aria-hidden="true">時刻の入力</a></h3>
+      <p>
+	<ul>
+	  <li>「ds」と入力すると現在時刻に変換できます</li>
+	</ul>
+      </p>
       
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/masui/GyaimMotion">Gyaim</a> is maintained by <a href="https://github.com/masui">masui</a>.</span>
