--- a/index.html
+++ b/index.html
@@ -54,14 +54,18 @@
 	  <ul>
 	    <li>ひらがな、カタカナ入力に便利です</li>
 	  </ul>
-	  <li>ローマ字入力した後「.」を入力するとGoogleSuggestが呼ばれます</li>
+	  <li>ローマ字入力した後「.」を入力するとGoogleの変換APIが呼ばれます</li>
 	  <ul>
-	    <li>固有名詞の入力に便利です</li>
+	    <li>固有名詞など、内部辞書で変換できない単語の入力に便利です</li>
 	  </ul>
-	  <ul>単語登録
-	    <li>登録したい単語をドラッグして選択した後で文字入力すると、選択した単語が第一候補に表示され、
+	</ul>
+      </p>
+	  
+      <h3><a class="anchor" aria-hidden="true"></a>単語登録</h3>
+      <p>
+	<ul>
+	  <li>登録したい単語をドラッグして選択した後で文字入力すると、選択した単語が第一候補に表示され、
 	      その単語をスペースキーで選択して改行キーで確定するとユーザ辞書に登録されます</li>
-	  </ul>
 	  <li>ユーザ辞書、学習辞書は以下にセーブされます</li>
 	  <ul>
 	    <li>ユーザ辞書: <code>~/.gyaimdict/localdict.txt</code></li>
@@ -71,7 +75,7 @@
 	</ul>
       </p>
 	    
-      <h3><a class="anchor" aria-hidden="true">秘密文字列の入力</a></h3>
+      <h3><a class="anchor" aria-hidden="true"></a>秘密文字列の入力</h3>
       <p>
 	<ul>
 	  <li>クレジットカード番号のように、辞書に登録はできないけれどもしばしば入力が必要な秘密文字列を簡単に入力することができます</li>
@@ -85,7 +89,7 @@
 	</ul>
       </p>
 
-      <h3><a class="anchor" aria-hidden="true">時刻の入力</a></h3>
+      <h3><a class="anchor" aria-hidden="true"></a>時刻の入力</h3>
       <p>
 	<ul>
 	  <li>「ds」と入力すると現在時刻に変換できます</li>
