--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 	</ul>
       </p>
 
-      <h3><a class="anchor" aria-hidden="true"></a>使い方</h3>
+      <h3><a class="anchor" aria-hidden="true"></a>基本的な使い方</h3>
       <p>
 	<ul>
 	  <li>ローマ字を入力すると候補が表示されます</li>
 	  <li>スペースキーで候補を選択し、改行キーで確定します</li>
-	  <li>ローマ字入力の後ですぐ改行キーを押すと完全マッチで候補が検索されます</li>
+	  <li>ローマ字を入力した後ですぐ改行キーを押すと完全マッチで候補が検索されます</li>
 	  <ul>
 	    <li>ひらがな、カタカナ入力に便利です</li>
 	  </ul>
@@ -58,6 +58,7 @@
 	  <ul>
 	    <li>固有名詞など、内部辞書で変換できない単語の入力に便利です</li>
 	  </ul>
+	  <li>「ds」と入力すると現在時刻に変換できます</li>
 	</ul>
       </p>
 	  
@@ -89,13 +90,10 @@
 	</ul>
       </p>
 
-      <h3><a class="anchor" aria-hidden="true"></a>時刻の入力</h3>
+      <h3><a class="anchor" aria-hidden="true"></a>画像の入力</h3>
       <p>
-	<ul>
-	  <li>「ds」と入力すると現在時刻に変換できます</li>
-	</ul>
       </p>
-      
+	
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/masui/GyaimMotion">Gyaim</a> is maintained by <a href="https://github.com/masui">masui</a>.</span>
 
