--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gyaim</h1>
-      <h2 class="project-tagline">MacOS用の簡易日本語入力IME</h2>
+      <h2 class="project-tagline">MacOS用の簡易日本語入力システム</h2>
       <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">dmgダウンロード</a>
       <a href="https://github.com/masui/GyaimMotion" class="btn">GitHubソース</a>
     </section>
@@ -23,8 +23,10 @@
       <p>
 	<ul>
 	  <li>GyaimはMacOS用の日本語入力IMEです。(Yosemiteで確認しています。それ以前のMacOSでは動かないかもしれません)</li>
+	  <li>「ことえり」「Google日本語入力」などと同様の使い方ができます。</li>
 	  <li>1000行程度のRubyで記述されてあり、改変が比較的簡単です。</li>
-	  <li>画像を入力できます</li>
+	  <li>プログラムのソースと辞書データがすべて公開されています。</li>
+	  <li>時刻入力/画像入力/秘密文字列入力 などの機能があります。</li>
 	</ul>
       </p>
 
@@ -92,6 +94,9 @@
 
       <h3><a class="anchor" aria-hidden="true"></a>画像の入力</h3>
       <p>
+	<ul>
+	  <li>後で解説...</li>
+	</ul>
       </p>
 	
       <footer class="site-footer">
