--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gyaim</h1>
-      <h2 class="project-tagline">MacOS用の簡易日本語入力システム</h2>
+      <h2 class="project-tagline">MacOS用の簡易日本語入力システム by Toshiyuki Masui</h2>
       <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">dmgダウンロード</a>
       <a href="https://github.com/masui/GyaimMotion" class="btn">GitHubソース</a>
     </section>
@@ -22,7 +22,10 @@
 
       <p>
 	<ul>
-	  <li>GyaimはMacOS用の日本語入力IMEです。(Yosemiteで確認しています。それ以前のMacOSでは動かないかもしれません)</li>
+	  <li>GyaimはMacOS用の日本語入力IMEです。</li>
+	  <ul>
+	    <li>Yosemiteで確認しています。それ以前のMacOSでは動かないかもしれません)</li>
+	  </ul>
 	  <li>「ことえり」「Google日本語入力」などと同様の使い方ができます。</li>
 	  <li>1000行程度のRubyで記述されてあり、改変が比較的簡単です。</li>
 	  <li>プログラムのソースと辞書データがすべて公開されています。</li>
