--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	  <li><a href="http://www.rubymotion.com/">RubyMotion</a>が必要です</li>
 	  <li><code>bundle install</code>でgemをインストールします
 	  <li><code>rake</code>でビルドします
+	  <li><code>make cp</code>で<code>~/Library/Input Methods/</code>にコピーされます
 	</ul>
       </p>
 
@@ -55,15 +56,16 @@
 	<ul>
 	  <li>ローマ字を入力すると候補が表示されます</li>
 	  <li>スペースキーで候補を選択し、改行キーで確定します</li>
+	  <li>バックスペースキーで前の状態に戻ります</li>
 	  <li>ローマ字を入力した後ですぐ改行キーを押すと完全マッチで候補が検索されます</li>
 	  <ul>
 	    <li>ひらがな、カタカナ入力に便利です</li>
 	  </ul>
-	  <li>ローマ字入力した後「.」を入力するとGoogleの変換APIが呼ばれます</li>
+	  <li>ローマ字入力した後、ピリオド(「<code>.</code>」)を入力するとGoogleの変換APIが呼ばれます</li>
 	  <ul>
 	    <li>固有名詞など、内部辞書で変換できない単語の入力に便利です</li>
 	  </ul>
-	  <li>「ds」と入力すると現在時刻に変換できます</li>
+	  <li>「<code>ds</code>」と入力すると現在時刻に変換できます</li>
 	</ul>
       </p>
 	  
