--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <h3><a class="anchor" aria-hidden="true"></a>単語登録</h3>
       <p>
 	<ul>
-	  <li>登録したい単語をドラッグして選択した後で文字入力すると、選択した単語が第一候補に表示され、
+	  <li>テキスト入力領域にある単語をドラッグして選択した後でローマ字入力すると、選択した単語が第一候補に表示されるので、
 	      その単語をスペースキーで選択して改行キーで確定するとユーザ辞書に登録されます</li>
 	  <li>ユーザ辞書、学習辞書は以下にセーブされます</li>
 	  <ul>
