--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
 	</ul>
       </p>
 	
+      <h3><a class="anchor" aria-hidden="true"></a>バグなどの報告</h3>
+      <p>
+	<ul>
+	  <li><a href="https://github.com/masui/GyaimMotion/issues">issue</a>に書いてもらえるとありがたいです</li>
+	</ul>
+      </p>
+	
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/masui/GyaimMotion">Gyaim</a> is maintained by <a href="https://github.com/masui">masui</a>.</span>
 
