--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	  <li>GyaimはMacOS用の日本語入力IMEです。</li>
 	  <ul>
 	    <li>Yosemiteで確認しています。それ以前のMacOSでは動かないかもしれません)</li>
+	    <li>「ことえり」「Google日本語入力」などと同様の使い方ができます。</li>
 	  </ul>
-	  <li>「ことえり」「Google日本語入力」などと同様の使い方ができます。</li>
 	  <li>1000行程度のRubyで記述されてあり、改変が比較的簡単です。</li>
 	  <li>プログラムのソースと辞書データがすべて公開されています。</li>
 	  <li>時刻入力/画像入力/秘密文字列入力 などの機能があります。</li>
@@ -44,7 +44,7 @@
       <h3><a class="anchor" aria-hidden="true"></a>ビルド</h3>
       <p>
 	<ul>
-	  <li><a href="http://www.rubymotion.com/">RubyMotion</a>が必要です</li>
+	  <li>Ruby, Xcode, <a href="http://www.rubymotion.com/">RubyMotion</a>が必要です</li>
 	  <li><code>bundle install</code>でgemをインストールします
 	  <li><code>rake</code>でビルドします
 	  <li><code>make cp</code>で<code>~/Library/Input Methods/</code>にコピーされます
