--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	</ul>
       </p>
 
-      <h3><a class="anchor" aria-hidden="true"></a>ビルド</h3>
+      <h3><a class="anchor" aria-hidden="true"></a>ビルド (開発者向け)</h3>
       <p>
 	<ul>
 	  <li>Ruby, Xcode, <a href="http://www.rubymotion.com/">RubyMotion</a>が必要です</li>
