--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	  <li>1000行程度のRubyで記述されてあり、改変が比較的簡単です。</li>
 	  <li>プログラムのソースと辞書データがすべて公開されています。</li>
 	  <li>時刻入力/画像入力/秘密文字列入力 など変な機能があります。</li>
+	  <li>単語登録が簡単です。</li>
 	</ul>
       </p>
 
