--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
       <h3><a class="anchor" aria-hidden="true"></a>インストール</h3>
       <p>
 	<ul>
-	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開し、<code>~/Library/Input Methods</code>にコピーします。</li>
+	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開し、
+	    <code>Gyaim.app</code>を<code>~/Library/Input Methods</code>にコピーします。</li>
 	  <li>「システム環境設定」の「キーボード」の「入力ソース」を選択して左下の「＋」をクリックし、「日本語」の中の「Gyaim」を選択して「追加」をクリックします。</li>
 	</ul>
       </p>
