--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gyaim</h1>
-      <h2 class="project-tagline">MacOS用の簡易日本語入力システム by Toshiyuki Masui</h2>
-      <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">dmgダウンロード</a>
-      <a href="https://github.com/masui/GyaimMotion" class="btn">GitHubソース</a>
+      <h2 class="project-tagline">MacOS用の簡易日本語入力システム by <a href="http://pitecan.com/">Toshiyuki Masui</a></h2>
+      <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">Gyaim.dmg ダウンロード</a>
+      <a href="https://github.com/masui/GyaimMotion" class="btn">ソース @ GitHub</a>
     </section>
 
     <section class="main-content">
