--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gyaim</h1>
-      <h2 class="project-tagline">MacOS用の簡易日本語入力システム by <a href="http://pitecan.com/">Toshiyuki Masui</a></h2>
+      <h2 class="project-tagline">MacOS用の簡易日本語入力システム by Toshiyuki Masui</h2>
       <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">Gyaim.dmg ダウンロード</a>
       <a href="https://github.com/masui/GyaimMotion" class="btn">ソース @ GitHub</a>
     </section>
@@ -24,7 +24,7 @@
 	<ul>
 	  <li>GyaimはMacOS用の日本語入力IMEです。</li>
 	  <ul>
-	    <li>Yosemiteで確認しています。それ以前のMacOSでは動かないかもしれません)</li>
+	    <li>Yosemiteで動作を確認しています。それ以前のMacOSでは動かないかもしれません)</li>
 	    <li>「ことえり」「Google日本語入力」などと同様の使い方ができます。</li>
 	  </ul>
 	  <li>1000行程度のRubyで記述されてあり、改変が比較的簡単です。</li>
@@ -46,7 +46,7 @@
       <h3><a class="anchor" aria-hidden="true"></a>ビルド (開発者向け)</h3>
       <p>
 	<ul>
-	  <li>Ruby, Xcode, <a href="http://www.rubymotion.com/">RubyMotion</a>が必要です</li>
+	  <li>Xcode, <a href="http://www.rubymotion.com/">RubyMotion</a>が必要です</li>
 	  <li><code>bundle install</code>でgemをインストールします
 	  <li><code>rake</code>でビルドします
 	  <li><code>make cp</code>で<code>~/Library/Input Methods/</code>にコピーされます
@@ -58,7 +58,7 @@
 	<ul>
 	  <li>ローマ字を入力すると候補が表示されます</li>
 	  <li>スペースキーで候補を選択し、改行キーで確定します</li>
-	  <li>バックスペースキーで前の状態に戻ります</li>
+	  <li>バックスペースキーまたは削除キーで前の状態に戻ります</li>
 	  <li>ローマ字を入力した後ですぐ改行キーを押すと完全マッチで候補が検索されます</li>
 	  <ul>
 	    <li>ひらがな、カタカナ入力に便利です</li>
