--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 	<ul>
 	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開し、
 	    <code>Gyaim.app</code>を<code>~/Library/Input Methods</code>にコピーします。</li>
+	  <ul>
+	    <li>Finderの設定メニューから「表示オプションを表示」「ライブラリフォルダを表示」を選択すると
+	      <code>Library/InputMethods</code>が見えるようになるので、そこにDrag&amp;Dropして下さい。</li>
+	    <li><img src="https://i.gyazo.com/cf517c3f33ec1fa2a5c6fa61dd16c2f3.png" width=500></li>
+	  </ul>
 	  <li>「システム環境設定」の「キーボード」の「入力ソース」を選択して左下の「＋」をクリックし、「日本語」の中の「Gyaim」を選択して「追加」をクリックします。</li>
 	</ul>
       </p>
