--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 	    <li>Finderの設定メニューから「表示オプションを表示」「ライブラリフォルダを表示」を選択すると
 	      <code>Library/InputMethods</code>が見えるようになるので、そこにDrag&amp;Dropして下さい。</li>
 	  </ul>
-	  <blockquote><img src="https://i.gyazo.com/cf517c3f33ec1fa2a5c6fa61dd16c2f3.png" width=500 /></blokquote>
+	  <img src="https://i.gyazo.com/cf517c3f33ec1fa2a5c6fa61dd16c2f3.png" width=500 />
 	  <li>「システム環境設定」の「キーボード」の「入力ソース」を選択して左下の「＋」をクリックし、「日本語」の中の「Gyaim」を選択して「追加」をクリックします。</li>
-	  <blockquote><img src="https://i.gyazo.com/4f5e55b34f739bdceda98815ec5100cf.png" width=500 /></blockquote>
+	  <img src="https://i.gyazo.com/4f5e55b34f739bdceda98815ec5100cf.png" width=500 />
 	</ul>
       </p>
 
