--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
       <h3><a class="anchor" aria-hidden="true"></a>バグなどの報告</h3>
       <p>
 	<ul>
-	  <li><a href="https://github.com/masui/GyaimMotion/issues">issue</a>に書いてもらえるとありがたいです</li>
+	  <li>問題などの報告はTwitter (<a href="https://twitter.com/masui">@masui</a>),
+	    Facebook (<a href="https://www.facebook.com/toshiyukimasui">toshiyukimasui</a>)
+	    などにお願いします.
+	  <li>Facebookの<a href="https://www.facebook.com/groups/1627692114158662/">自前IMEグループ</a>もあります.
+	  <li>GitHubの<a href="https://github.com/masui/GyaimMotion/issues">issue</a>に書いていただいてもかまいません.</li>
 	</ul>
       </p>
 	
