--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
       <h3><a class="anchor" aria-hidden="true"></a>秘密文字列の入力</h3>
       <p>
 	<ul>
-	  <li>クレジットカード番号のように、辞書に登録はできないけれどもしばしば入力が必要な秘密文字列を簡単に入力することができます</li>
+	  <li>クレジットカード番号のような、辞書に登録したくないが時々入力が必要な秘密文字列を安全に入力することができます</li>
 	  <li>秘密の読みを入力した後で「?」を入力すると秘密文字列が候補に表示されます</li>
 	  <li>前述の単語登録のやり方を使用して、文字列の最後に「?」が続くような読みを登録すると、暗号化された文字列が辞書に登録されます</li>
 	  <li>たとえばクレジットカード番号を「kureka?」という読みで登録しておくと、「kureka?」と入力したときクレジットカード番号が候補に表示されます</li>
 	  <li>「kureka」だと他人にわかってしまうかもしれませんが、秘密の読みを利用すれば、それを入力しない限りクレジットカード番号が候補に出ることはありませんし、
 	    辞書には暗号化された文字列だけが登録されるので安全です  (「kureka」のような読みは辞書に登録されません)</li>
-	  <li>例えば「32文字のパスワードを要求する鬼畜なシステム」が有ったとしても、この方式で登録しておけば覚えておく必要がなくなります</li>
-	  <li>何かの理由で秘密ファイルを使う必要があるとき、秘密ファイルの名前を登録しておけば見失ってしまうことがありません</li>
+	  <li>ものすごく長いパスワードを要求するシステムでも、この方式でパスワードを辞書に登録しておけば覚えておく必要がなくなります</li>
+	  <li>その他各種の秘密を覚えておくのに使えるでしょう</li>
 	</ul>
       </p>
 
