--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h3><a class="anchor" aria-hidden="true"></a>秘密文字列の入力</h3>
       <p>
 	<ul>
-	  <li>クレジットカード番号のような、辞書に登録したくないが時々入力が必要な秘密文字列を安全に入力することができます</li>
+	  <li>クレジットカード番号のような、辞書に登録したくない秘密文字列を安全に入力することができます</li>
 	  <li>秘密の読みを入力した後で「?」を入力すると秘密文字列が候補に表示されます</li>
 	  <li>前述の単語登録のやり方を使用して、文字列の最後に「?」が続くような読みを登録すると、暗号化された文字列が辞書に登録されます</li>
 	  <li>たとえばクレジットカード番号を「kureka?」という読みで登録しておくと、「kureka?」と入力したときクレジットカード番号が候補に表示されます</li>
