--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
       <h3><a class="anchor" aria-hidden="true"></a>特徴</h3>
 
-      <img src="https://gyazo.com/470039210d20405c14ab36afff5271bb.gif"/>
+      <!--- <img src="https://gyazo.com/470039210d20405c14ab36afff5271bb.gif"/> -->
+      <img src="https://gyazo.com/648245adc6252b716db7af9f7b2022ab.gif"/:
       
       <p>
 	<ul>
