--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       
       <p>
 	<ul>
-	  <li>GyaimはMacOS用の日本語入力IMEです。</li>
+	  <li>GyaimはMacOS用の日本語入力システム(IME)です。</li>
 	  <li>1000行程度のRubyで記述されてあり、改変が比較的簡単です。</li>
 	  <li>プログラムのソースと辞書データがすべて公開されています。</li>
 	  <li>時刻入力/画像入力/秘密文字列入力 など変な機能があります。</li>
