--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 	<ul>
 	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開し、
 	    <code>Gyaim.app</code>を<code>~/Library/Input Methods</code>にコピーします。</li>
+	  <li>Terminal.appを利用する場合は ```cp -r /Volumes/Gyaim/Gyaim.app ~/Library/'Input Methods'``` として下さい。
+	    そうでない場合は以下のようにして下さい。
+	  </li>
 	  <ul>
 	    <li>Finderの設定メニューから「表示オプションを表示」「ライブラリフォルダを表示」を選択すると
 	      <code>Library/InputMethods</code>が見えるようになるので、そこにDrag&amp;Dropして下さい。</li>
