--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<ul>
 	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開し、
 	    <code>Gyaim.app</code>を<code>~/Library/Input Methods</code>にコピーします。</li>
-	  <li>Terminal.appを利用する場合は ```cp -r /Volumes/Gyaim/Gyaim.app ~/Library/'Input Methods'``` として下さい。
+	  <li>Terminal.appを利用する場合は <code>cp -r /Volumes/Gyaim/Gyaim.app ~/Library/'Input Methods'</code> として下さい。
 	    そうでない場合は以下のようにして下さい。
 	  </li>
 	  <ul>
