--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
 	    <code>Gyaim.app</code>を<code>~/Library/Input Methods</code>にコピーします。</li>
 	  <ul>
 	    <li>Terminal.appを利用する場合は <code>cp -r /Volumes/Gyaim/Gyaim.app ~/Library/'Input Methods'</code> として下さい。
-	      そうでない場合は以下のような手順でコピーしてして下さい。</li>
+	      そうでない場合は以下の手順でコピーしてして下さい。</li>
 	    <li>Finderの設定メニューから「表示オプションを表示」「ライブラリフォルダを表示」を選択すると
 	      <code>Library/InputMethods</code>が見えるようになるので、そこにDrag&amp;Dropして下さい。</li>
 	    <p><img src="https://i.gyazo.com/cf517c3f33ec1fa2a5c6fa61dd16c2f3.png" width=500 /></p>
 	  </ul>
 	  <li>「システム環境設定」の「キーボード」の「入力ソース」を選択して左下の「＋」をクリックし、「日本語」の中の「Gyaim」を選択して「追加」をクリックします。</li>
 	  <p><img src="https://i.gyazo.com/4f5e55b34f739bdceda98815ec5100cf.png" width=500 /></p>
+	  <li>GyaimはAppleの認証を受けていないので「開発元が未確認のため開けません」というメッセージが出る場合があります。
+	    この場合、システムのセキュリティ設定を一時的に変更するか、右クリックで開くなどして対処して下さい。
+	    (<a href="http://www.mdf-soft.com/blog/?p=1062">このページ</a>などを参考にして下さい)
 	</ul>
       </p>
 
