--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	  <li>時刻入力/画像入力/秘密文字列入力 など変な機能があります。</li>
 	  <li>単語登録が簡単です。</li>
 	  <li>Yosemiteで動作を確認しています。それ以前のMacOSでは動かないかもしれません</li>
+	  <li><b>いわゆる連文節変換はできません。</b>
 	</ul>
       </p>
 
