画像変換の説明追加

--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
 	</ul>
       </p>
 	    
+      <h3><a class="anchor" aria-hidden="true"></a>画像の入力</h3>
+      <p>
+	<ul>
+	  <li><a href="http://Gyazo.com/">Gyazo</a>の画像IDと読みをユーザ辞書に登録しておくと、その読みで画像を入力できます。</li>
+	</ul>
+      </p>
+	
       <h3><a class="anchor" aria-hidden="true"></a>秘密文字列の入力</h3>
       <p>
 	<ul>
@@ -110,14 +117,7 @@
 	  <li>その他各種の秘密を覚えておくのに使えるでしょう</li>
 	</ul>
       </p>
-
-      <h3><a class="anchor" aria-hidden="true"></a>画像の入力</h3>
-      <p>
-	<ul>
-	  <li>後で解説...</li>
-	</ul>
-      </p>
-	
+      
       <h3><a class="anchor" aria-hidden="true"></a>バグなどの報告</h3>
       <p>
 	<ul>
