--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Gyaim</h1>
-      <h2 class="project-tagline">MacOS用の簡易日本語入力システム by Toshiyuki Masui</h2>
+      <h2 class="project-tagline">MacOS用の日本語入力システム by Toshiyuki Masui</h2>
       <a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg" class="btn">Gyaim.dmg ダウンロード</a>
       <a href="https://github.com/masui/GyaimMotion" class="btn">ソース @ GitHub</a>
     </section>
