--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	    <li>ユーザ辞書: <code>~/.gyaimdict/localdict.txt</code></li>
 	    <li>学習辞書: <code>~/.gyaimdict/studydict.txt</code></li>
 	  </ul>
-	  <li>ユーザ辞書は普通に編集可能です</li>
+	  <li>ユーザ辞書は普通にテキストエディタで編集可能です</li>
 	</ul>
       </p>
 	    
