--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	  <!--
 	  <li>テキスト入力領域にある単語をドラッグして選択した後でローマ字入力すると、選択した単語が第一候補に表示されるので、
 	    その単語をスペースキーで選択して改行キーで確定するとユーザ辞書に登録されます</li>-->
-	  <li>選択中の文字列があるときやコピーバッファ内に文字列があるとき入力を行なうとその文字列が第一候補に表示され、
+	  <li>選択中の文字列がある状態で入力を行なうとその文字列が第一候補に表示され、
 	    選択して確定するとユーザ辞書に登録されます</li>
 	  <li>ユーザ辞書、学習辞書は以下にセーブされます</li>
 	  <ul>
