wgetの記述追加

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <p>
 	<ul>
 	  <li><a href="http://Gyazo.com/">Gyazo</a>の画像IDと読みをユーザ辞書に登録しておくと、その読みで画像を入力できます。</li>
+	  <li>現在のところ<code>/usr/local/bin/wget</code>が必要です。不要にしたいと思います。
 	</ul>
       </p>
 	
