--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 	  <li>時刻入力/画像入力/秘密文字列入力 など変な機能があります。</li>
 	  <li>単語登録が簡単です。</li>
 	  <li>Yosemiteで動作を確認しています。それ以前のMacOSでは動かないかもしれません</li>
-	  <li><b>いわゆる連文節変換はできません。</b>
 	</ul>
       </p>
 
@@ -121,13 +120,15 @@
 	</ul>
       </p>
       
-      <h3><a class="anchor" aria-hidden="true"></a>バグなどの報告</h3>
+      <h3><a class="anchor" aria-hidden="true"></a>注意/お願い</h3>
       <p>
 	<ul>
+	  <li>いわゆる連文節変換はできません.</li>
+	  <li>ユーザが設定できる項目はありません.</li>
 	  <li>問題などの報告はTwitter (<a href="https://twitter.com/masui">@masui</a>),
 	    Facebook (<a href="https://www.facebook.com/toshiyukimasui">toshiyukimasui</a>)
-	    などにお願いします.
-	  <li>Facebookの<a href="https://www.facebook.com/groups/1627692114158662/">自前IMEグループ</a>もあります.
+	    などにお願いします.</li>
+	  <li>Facebookの<a href="https://www.facebook.com/groups/1627692114158662/">自前IMEグループ</a>もあります.</li>
 	  <li>GitHubの<a href="https://github.com/masui/GyaimMotion/issues">issue</a>に書いていただいてもかまいません.</li>
 	</ul>
       </p>
