Terminal.app => ターミナル

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	  <li><a href="https://github.com/masui/GyaimMotion/raw/master/Gyaim.dmg">Gyaim.dmg</a>をダウンロードして展開し、
 	    <code>Gyaim.app</code>を<code>~/Library/Input Methods</code>にコピーします。</li>
 	  <ul>
-	    <li>Terminal.appを利用する場合は <code>cp -r /Volumes/Gyaim/Gyaim.app ~/Library/'Input Methods'</code> として下さい。
+	    <li>ターミナルを利用する場合は <code>cp -r /Volumes/Gyaim/Gyaim.app ~/Library/'Input Methods'</code> として下さい。
 	      そうでない場合は以下の手順でコピーしてして下さい。</li>
 	    <li>Finderの設定メニューから「表示オプションを表示」「ライブラリフォルダを表示」を選択すると
 	      <code>Library/InputMethods</code>が見えるようになるので、そこにDrag&amp;Dropして下さい。</li>
