--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 	    スペースキーでその単語を選択して確定するとユーザ辞書に登録されます</li>
 	  <li>ユーザ辞書、学習辞書は以下にセーブされます</li>
 	  <ul>
-	    <li>ユーザ辞書: <code>~/.gyaimdict/localdict.txt</code></li>
-	    <li>学習辞書: <code>~/.gyaimdict/studydict.txt</code></li>
+	    <li>ユーザ辞書: <code>~/.gyaim/localdict.txt</code></li>
+	    <li>学習辞書: <code>~/.gyaim/studydict.txt</code></li>
 	  </ul>
 	  <li>ユーザ辞書は普通にテキストエディタで編集可能です</li>
 	</ul>
