--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 	  <!--
 	  <li>テキスト入力領域にある単語をドラッグして選択した後でローマ字入力すると、選択した単語が第一候補に表示されるので、
 	    その単語をスペースキーで選択して改行キーで確定するとユーザ辞書に登録されます</li>-->
+	  <li>テキストをCmd-Cなどでコピーしてから入力を行なうとコピーした単語が第一候補に表示され、
+	    スペースキーでその単語を選択して確定するとユーザ辞書に登録されます</li>
 	  <li>マウスドラッグで選択中の文字列がある状態で入力を行なうと、選択中の文字列が第一候補に表示され、
 	    スペースキーでその単語を選択して確定するとユーザ辞書に登録されます</li>
 	  <li>ユーザ辞書、学習辞書は以下にセーブされます</li>
