Sierraの記述追加

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	  <li>プログラムのソースと辞書データがすべて公開されています。</li>
 	  <li>時刻入力/画像入力/秘密文字列入力 など変な機能があります。</li>
 	  <li>単語登録が簡単です。</li>
-	  <li>YosemiteとEl Capitanで動作を確認しています。それ以前のMacOSでは動かないかもしれません</li>
+	  <li>Yosemite, El Capitan, Sierraで動作を確認しています。それ以前のMacOSでは動かないかもしれません</li>
 	</ul>
       </p>
 
